--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_bloc: ^9.1.0
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
+  record: ^5.0.5 # For audio recording
+  path_provider: ^2.1.3 # For finding temp directories
+  permission_handler: ^11.3.1 # For microphone permissions
 
 dev_dependencies:
   flutter_test:
