--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   record: ^5.0.5 # For audio recording
   path_provider: ^2.1.3 # For finding temp directories
   permission_handler: ^11.3.1 # For microphone permissions
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
