--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "IDX.aI.enableInlineCompletion": true,
-  "IDX.aI.enableCodebaseIndexing": true,
-  "dart.flutterSdkPath": ".fvm/versions/3.29.3"
+  "IDX.aI.enableCodebaseIndexing": true
 }
