--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.3 # For finding temp directories
   permission_handler: ^11.3.1 # For microphone permissions
   collection: ^1.19.1
+  package_info_plus: ^8.0.0 # Added for version info
 
 dev_dependencies:
   flutter_test:
