--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^11.3.1 # For microphone permissions
   collection: ^1.19.1
   package_info_plus: ^8.0.0 # Added for version info
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
