--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,10 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  use_modular_headers! # Add this line
+
+  # Add this line for Microphone permission
+  pod 'permission_handler_apple/Microphone'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
