--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # ... existing dependencies ...
+  flutter_localizations:
+    sdk: flutter
   clock: ^1.1.1 # Add the clock package
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
-  intl: ^0.20.2
+  intl: ^0.19.0 # Downgrade to match flutter_localizations
   flutter_bloc: ^9.1.0
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
@@ -48,6 +46,7 @@ dependencies:
   package_info_plus: ^8.0.0 # Added for version info
   equatable: ^2.0.7
   get_it: ^8.0.3
+  path: ^1.9.0 # Add path dependency
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +57,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   path_provider_platform_interface: ^2.1.2 # Add this line
   plugin_platform_interface: ^2.1.8
+  fake_async: ^1.3.1 # Add fake_async dev dependency
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
