--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   path: ^1.9.0 # Add path dependency
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
