--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   get_it: ^8.0.3
   path: ^1.9.0 # Add path dependency
   uuid: ^4.5.1
+  flutter_markdown: ^0.7.3 # Add flutter_markdown
 
 dev_dependencies:
   flutter_test:
