--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.3+1
+version: 1.1.4+1
 
 environment:
   sdk: ^3.7.0-209.1.beta
@@ -47,6 +47,8 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   path: ^1.9.0 # Add path dependency
+  uuid: ^4.5.1
+  flutter_markdown: ^0.7.3 # Add flutter_markdown
 
 dev_dependencies:
   flutter_test:
