--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   clock: ^1.1.1 # Add the clock package
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
-  intl: ^0.19.0 # Downgrade to match flutter_localizations
+  intl: ^0.20.2 # Updated to match flutter_localizations requirement
   flutter_bloc: ^9.1.0
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
