--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,11 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+# CP: Formatter configuration to preserve existing trailing comma behavior
+formatter:
+  trailing_commas: preserve
+  page_width: 120
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
