--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.8+1
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.8.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,7 +34,7 @@ dependencies:
     sdk: flutter
   clock: ^1.1.1 # Add the clock package  cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
-  intl: ^0.19.0 # CP: Downgraded to match flutter_localizations requirement
+  intl: ^0.20.2 # Updated to match flutter_localizations requirement
   flutter_bloc: ^9.1.0
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
@@ -52,7 +52,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.3
   build_runner: ^2.4.6
