--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path: ^1.9.0 # Add path dependency
   uuid: ^4.5.1
   flutter_markdown: ^0.7.3 # Add flutter_markdown
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
