--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "IDX.aI.enableInlineCompletion": true,
   "IDX.aI.enableCodebaseIndexing": true,
-  "dart.flutterSdkPath": "/home/berti/flutter"
+  "dart.flutterSdkPath": ".fvm/versions/stable"
 }
