--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_markdown: ^0.7.3 # Add flutter_markdown
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.2
+  image_picker: ^1.0.7
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
