--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -27,6 +27,16 @@ Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
 
+# Fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+fastlane/*.p8
+
+# Bundler
+vendor/bundle
+
 # Exceptions to above rules.
 !default.mode1v3
 !default.mode2v3
