refactor: migrate CLAUDE.md to modular .claude/rules/ structure
Reorganizes project instructions into focused rule files following
Claude Code best practices:
- commands.md: Flutter commands, testing policy, environment
- architecture.md: Service layer, DI, data patterns
- flutter.md: Widget/state conventions (scoped to lib/**/*.dart)
- testing.md: Test approach, mocking (scoped to test/**/*.dart)
- release.md: What's New dialog, migration status
- debug-api.md: Debug HTTP API reference

Also adds:
- .claude/settings.json for shared project permissions
- Updated .gitignore for local rule files

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,10 @@ android/app/.cxx/
 
 coverage
 
-# Spec Kit - Local settings may contain user-specific permissions
+# Claude Code - Local settings (user-specific permissions and rules)
 .claude/settings.local.json
+.claude/*.local.md
+CLAUDE.local.md
 .serena/
 
 # Git worktrees
