feat: add Android fastlane setup for Google Play deployment
Configure fastlane with lanes for internal testing track upload.
Includes signing config template and updated Gradle/AGP versions
to support latest androidx dependencies.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -11,3 +11,7 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+# Fastlane
+fastlane/play-store-credentials.json
+fastlane/report.xml
