--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   google_sign_in: ^7.2.0
   cloud_firestore: ^6.1.1
   table_calendar: ^3.1.2
+  sign_in_with_apple: ^7.0.1
+  crypto: ^3.0.7
 
 dev_dependencies:
   flutter_test:
